Add fonts and start of basic scss
Co-authored-by: rick_haag@hotmail.com <rick_haag@hotmail.com>

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,11 @@
-<h1>Dive Inn!</h1>
+<h1>Dive Inn - What's Inside ? ! @ # $ % * ( ) ~</h1>
+<p> The quick brown ox forked over the jazzy dog mp.</p>
+<h1 class='anton'>Dive Inn - What's Inside ? ! @ # $ % * ( ) ~</h1>
+<p class='ptSans'> The quick brown ox forked over the jazzy dog mp.</p>
+<h1 class='bevan'>Dive Inn - What's Inside ? ! @ # $ % * ( ) ~</h1>
+<p class='ptSansBold'> The quick brown ox forked over the jazzy dog mp.</p>
+<h1 class='patua'>Dive Inn - What's Inside ? ! @ # $ % * ( ) ~</h1>
+<p> The quick brown ox forked over the jazzy dog mp.</p>
+
+
 <router-outlet></router-outlet>
