fix server-app class and use from server.ts

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,6 +1,6 @@
-$dive-white: #f0f0f0;
-$dive-red: #f00;
-$dive-black: #0f0909;
+$dive-white: #ebebeb;
+$dive-red: #de2726;
+$dive-black: #151212;
 $dive-gray-lt: #cbb;
 $dive-gray-md: #988;
-$dive-gray-dk: #322;
+$dive-gray-dk: #544;
