--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,4 +6,14 @@
   margin: 2rem;
   padding: 2rem;
   border: 1px solid $dive-red;
+
+  .gray-lt {
+    color: $dive-gray-lt;
+  }
+  .gray-md {
+    color: $dive-gray-md;
+  }
+  .gray-dk {
+    color: $dive-gray-dk;
+  }
 }
