--- a/src/app/components/server-test/server-test.component.html
+++ b/src/app/components/server-test/server-test.component.html
@@ -4,5 +4,5 @@
 
 <button (click)="getAnswer()">server test</button>
 
-<!-- <p style="border: 1px solid red; padding: 1em;">Return fn(): {{ (serverTestService.getServerTestData$() | async) }}</p> -->
+<!-- <p style="border: 1px solid red; padding: 1em;">Return fn(): {{ (serverTestService.getServerConstData$() | async) }}</p> -->
 <p style="border: 1px solid red; padding: 1em;">Return var: {{ (serverResponse$ | async)?.test_id }}</p>
