--- a/src/scss/_font-faces.scss
+++ b/src/scss/_font-faces.scss
@@ -8,19 +8,25 @@
 //        url('webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
 // }
 
-/* alfa-slab-one-regular - latin */
-@font-face {
-  font-family: 'Alfa Slab One';
-  font-style: normal;
-  font-weight: 400;
-  src: url('/assets/fonts/alfa-slab-one-v9-latin-regular.eot'); /* IE9 Compat Modes */
-  src: local('Alfa Slab One Regular'), local('AlfaSlabOne-Regular'),
-       url('/assets/fonts/alfa-slab-one-v9-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('/assets/fonts/alfa-slab-one-v9-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('/assets/fonts/alfa-slab-one-v9-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('/assets/fonts/alfa-slab-one-v9-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('/assets/fonts/alfa-slab-one-v9-latin-regular.svg#AlfaSlabOne') format('svg'); /* Legacy iOS */
+@mixin fontFace($name, $file, $folder, $fullName, $postscriptName, $style: normal, $weight: 400) {
+  $basePath: '/assets/fonts/';
+  @font-face {
+    font-family: $name;
+    font-style: $style;
+    font-weight: $weight;
+    src: url($basePath + $file + '.eot'); /* IE9 Compat Modes */
+    src: 
+      local($fullName) /* use font from user's system if installed */
+      local($postscriptName),  /* local Postscript for OS X + Safari */
+      url($basePath + $file + '.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+      url($basePath + $file + '.woff2') format('woff2'), /* Super Modern Browsers */
+      url($basePath + $file + '.woff') format('woff'), /* Modern Browsers */
+      url($basePath + $file + '.ttf') format('truetype'), /* Safari, Android, iOS */
+      url($basePath + $file + '.svg#AlfaSlabOne') format('svg'); /* Legacy iOS */
+  }
 }
+
+@include fontFace('Alfa Slab One', 'alfa-slab-one-v9-latin-regular', 'alfa-slab-one', 'Alfa Slab One Regular', 'AlfaSlabOne-Regular');
 
 @font-face {
   font-family: 'Anton';
