--- a/src/styles.scss
+++ b/src/styles.scss
@@ -62,14 +62,15 @@ button {
   text-shadow: 0px 0px 5px #000;
   text-transform: uppercase;
 
-  transition: outline-offset 1s ease-out;
+  //transition: outline-offset 1s ease-out;
   
 
   cursor: pointer;
+  @extend %focusOutline;
   &:focus {     
-    outline: thin dashed;// yellow; 
-    outline-offset: 2px;
-    $offset: 35%;
+    //outline: thin dashed;// yellow; 
+    //outline-offset: 2px;
+    //$offset: 35%;
     //background-image: linear-gradient(180deg, transparent $offset, rgba(255,255,255,0.45) ($offset + 4%), rgba(255,255,255,0.85) ($offset + 6%), rgba(255,255,255,0.45) ($offset + 8%), transparent ($offset + 12%));
     //outline: none;
     // background: #efc700;
@@ -93,5 +94,20 @@ button {
     // &:focus {
     //   border-color: #efc700;
     // }
+  }
+} // end button
+
+input {
+  @extend %focusOutline;
+}
+select {
+  @extend %focusOutline;
+}
+
+// *************************************
+%focusOutline {
+  &:focus {
+    outline: thin dashed $dive-white;// yellow; 
+    outline-offset: 2px; 
   }
 }
