--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,7 @@
 <img src='/assets/images/logoLg.png' />
 <img src='/assets/images/logoSm.png' />
-<h1 class='bevan'>Dive Inn - What's Inside ? ! @ # $ % * ( ) ~ - + = ' " ;</h1>
-<h1 class='alfa'>Dive Inn - What's Inside ? ! @ # $ % * ( ) ~ - + = ' " ;</h1>
-<h1 class='anton'>Dive Inn - What's Inside ? ! @ # $ % * ( ) ~ - + = ' " ;</h1>
-<h1 class='patua'>Dive Inn - What's Inside ? ! @ # $ % * ( ) ~ - + = ' " ;</h1>
-<p> The quick brown ox forked over the jazzy dog mp.</p>
-<p class='gray-lt'> The quick brown ox forked over the jazzy dog mp. ? ! @ # $ % & * ( ) ~ - + = ' " ;</p>
-<p class='gray-md'> The quick brown ox forked over the jazzy dog mp.</p>
-<p class='ptSans gray-dk'> The quick brown ox forked over the jazzy dog mp.</p>
-<p class='ptSansBold'> The quick brown ox forked over the jazzy dog mp.</p>
 
+<app-font-test></app-font-test>
 <app-server-test></app-server-test>
+
 <router-outlet></router-outlet>
