--- a/src/app/components/font-test/font-test.component.scss
+++ b/src/app/components/font-test/font-test.component.scss
@@ -1,14 +1,21 @@
+@import '../../../scss/common-imports';
+
 :host {
   display: block;
 
   .controlsContainer {
     display: flex;
     justify-content: space-between;
+  }
 
-    select {
-      &:focus {
+  hr {
+    margin: 2em 0;
+  }
 
-      }
+  optgroup {
+    border-bottom: 1px solid $dive-red;
+    &:last-child {
+      border: none;
     }
   }
 }
