--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,17 @@
 <app-server-test></app-server-test>
 
 <router-outlet></router-outlet>
+
+<app-animated-cube></app-animated-cube>
+
+<app-animated-checkmark-svg></app-animated-checkmark-svg>
+
+<!-- <app-animated-checkmark-svg
+  size="100"
+>
+</app-animated-checkmark-svg>
+
+<app-checkbox
+  id="testCheckbox"
+  uiLabel="Test Checkbox"
+></app-checkbox> -->
