--- a/src/app/components/font-test/font-test.component.html
+++ b/src/app/components/font-test/font-test.component.html
@@ -83,7 +83,7 @@
   </div> -->
 
 
-  <!-- <div>
+  <div>
     <h4>Add a new font</h4>
     <label for="addFontFamily">Family: </label>
     <input type="text"
@@ -104,7 +104,7 @@
     <p>Input: {{ fontNameToAdd }}</p>
     <p>Valid: {{ addFontHref.valid }}</p>
   </div>
-</div> -->
+</div>
 
 
 <div class="controlsContainer">
