--- a/src/app/components/shared/checkbox/checkbox.component.html
+++ b/src/app/components/shared/checkbox/checkbox.component.html
@@ -1,12 +1,12 @@
 <input type="checkbox"
-  [id]="controlID"
+  id="textBold"
   [(ngModel)]="checkedValue"
   [checked]="checkedValue"
 
   (change)="onChange($event)"
   (ngModelChange)="onNgModelChange($event)"
 />
-<label for="textBold"><span>Bold AT|jpgy</span></label>
+<label for="textBold"><span>Bold</span></label>
 
 <p>checkedValue:<br>{{checkedValue}}</p>
 
