retrieved font data from DB
Co-authored-by: mvondrak@gmail.com <mvondrak@gmail.com>

--- a/src/app/components/font-test/font-test.component.html
+++ b/src/app/components/font-test/font-test.component.html
@@ -21,7 +21,7 @@
       (ngModelChange)="onModelChange(controlsEnum.header, $event)"
     >
       <optgroup label="Header Fonts">
-        <option *ngFor="let font of hFonts"
+        <option *ngFor="let font of fontList$ | async"
           [ngValue]="font"
         >
           {{ font.uiText }}
