--- a/src/app/components/font-test/font-test.component.html
+++ b/src/app/components/font-test/font-test.component.html
@@ -39,12 +39,11 @@
     <label for="headerBold">Bold: </label>
     <input type="checkbox"
       id="headerBold"
-      [(ngModel)]="headerFont.properties.bold"
-      (ngModelChange)="$event ? headerFont.properties.weight = 700 : headerFont.properties.weight = 400"
-      [checked]="headerFont.properties.weight === 700"
+      (ngModelChange)="$event ? headerFont.properties.weight = '700' : headerFont.properties.weight = '400'"
+      [checked]="headerFont.properties.weight === '700'"
     />
     <p>Selected Font:<br>{{headerFont.uiText}}</p>
-    <p>bold: {{headerFont.properties.bold}}<br>weight: {{headerFont.properties.weight}}</p>
+    <p>weight: {{headerFont.properties.weight}}</p>
   </div>
 
   <div>
@@ -60,8 +59,7 @@
     </select>
     <br/>
     <p>Selected Font:<br>{{textFont.uiText}}</p>
-    <p>bold: {{textFont.properties.bold}}
-    <br>weight: {{textFont.properties.weight}}</p>
+    <p>weight: {{textFont.properties.weight}}</p>
   </div>
 
 
@@ -70,7 +68,6 @@
       uiLabel='Bold'
       [(checkedValue)]='checkedValue'
     ></checkbox>
-    <p>Bold value: {{textFont.properties.bold}}</p>
     <p>Weight value: {{textFont.properties.weight}}</p>
   </div>
 
