font-list-display remove button

--- a/src/app/shared/components/font-list-display/font-list-display.component.html
+++ b/src/app/shared/components/font-list-display/font-list-display.component.html
@@ -8,6 +8,7 @@
       <span class='col' *ngFor="let variant of font.properties.variants.entries()">
         | {{ variant }}
       </span>
+      <button class="remove-button" (click)="onClickRemove(font)">X</button>
     </li>
   </ul>
 </div>
