--- a/src/app/shared/components/font-list-display/font-list-display.component.html
+++ b/src/app/shared/components/font-list-display/font-list-display.component.html
@@ -8,7 +8,7 @@
       <span class='col' *ngFor="let variant of font.properties.variants.entries()">
         | {{ variant }}
       </span>
-      <button class="remove-button" (click)="moveFromAvailToSelectable(font)">></button>
+      <button class="remove-button" (click)="fontClick(font)">X</button>
     </li>
   </ul>
 </div>
