font list UI updates

--- a/src/app/pages/configuration/configuration.page.component.html
+++ b/src/app/pages/configuration/configuration.page.component.html
@@ -1,18 +1,24 @@
 <div class="page wide">
   
-  Selectable Fonts:
-  <br>
-  -----------------
-  <app-font-list-display [fontList$]="selectableFonts$" [listType]="fontListsEnum.SELECTABLE" (fontClicked)="fontClick($event)"></app-font-list-display>
-  <br><br>
-  Blacklisted Fonts:
-  <br>
-  -----------------
-  <app-font-list-display [fontList$]="blacklistedFonts$" [listType]="fontListsEnum.BLACKLISTED" (fontClicked)="fontClick($event)" ></app-font-list-display>
-  <br><br>
-  Available Fonts:
-  <br>
-  -----------------
-  <app-font-list-display [fontList$]="top100Fonts$" [listType]="fontListsEnum.AVAILABLE" (fontClicked)="fontClick($event)"></app-font-list-display>
+  <app-font-list-display 
+    listName="Blacklisted Fonts"
+    [fontList$]="blacklistedFonts$" 
+    [listType]="fontListsEnum.BLACKLISTED" 
+    (fontClicked)="fontClick($event)" >
+  </app-font-list-display>
+
+  <app-font-list-display 
+    listName="Available Fonts"
+    [fontList$]="top100Fonts$"
+    [listType]="fontListsEnum.AVAILABLE"
+    (fontClicked)="fontClick($event)">
+  </app-font-list-display>
+
+  <app-font-list-display 
+    listName="Selectable Fonts"
+    [fontList$]="selectableFonts$" 
+    [listType]="fontListsEnum.SELECTABLE"
+    (fontClicked)="fontClick($event)">
+  </app-font-list-display>
 
 </div>
